WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121109
AX: Mac platform is not using accessibilityTitle from the Base implementation
https://bugs.webkit.org/show_bug.cgi?id=121109
Summary
AX: Mac platform is not using accessibilityTitle from the Base implementation
chris fleizach
Reported
2013-09-10 12:20:55 PDT
In WebAccessibilityObjectWrapperBase there are accessibilityTitle and Description methods. The WebAccessibilityObjectWrapperMac subclass is not using these and instead duplicating them (for some reason), and they're starting to diverge!
Attachments
patch
(7.08 KB, patch)
2013-09-10 17:08 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-09-10 12:21:06 PDT
<
rdar://problem/14956940
>
chris fleizach
Comment 2
2013-09-10 17:08:38 PDT
Created
attachment 211265
[details]
patch
WebKit Commit Bot
Comment 3
2013-09-11 00:36:27 PDT
Comment on
attachment 211265
[details]
patch Clearing flags on attachment: 211265 Committed
r155505
: <
http://trac.webkit.org/changeset/155505
>
WebKit Commit Bot
Comment 4
2013-09-11 00:36:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug