AX: Mac platform is not using accessibilityTitle from the Base implementation https://bugs.webkit.org/show_bug.cgi?id=121109

Reviewed by Sam Weinig.

Remove the Mac platform overrides of accessibilityTitle, Description, HelpText.
The Base implementation has these and we can share them between iOS and Mac

* accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(-[WebAccessibilityObjectWrapperBase accessibilityTitle]):
(-[WebAccessibilityObjectWrapperBase accessibilityDescription]):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:


Canonical link: https://commits.webkit.org/139066@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155505 268f45cc-cd09-0410-ab3c-d52691b4dbfc